issue-6: code optimization